<?xml version="1.0"?>
<package format="2">
  <name>semantic_route_drawer</name>
  <version>0.0.0</version>
  <description>The semantic_route_drawer package</description>

  <maintainer email="gsarthou@laas.fr">srth</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ontologenius</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <build_export_depend>ontologenius</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>ontologenius</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

</package>
